# github-projects-mcp

./: README.md  pyproject.toml
src/github_projects_mcp/: github_client.py  server.py
