
[project]
name = "mcp-github-projects"
version = "0.1.0"
description = "MCP Server for interacting with GitHub Projects V2"
requires-python = "==3.12.8" # Specify a reasonable minimum Python version
authors = [
    {name = "Hillary Kipkemoi", email = "hillary6k@gmail.com"},
]
dependencies = [
    "fastmcp>=2.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
# If you want a command-line entry point later, you can add it here
mcp-github-projects = "github_projects_mcp.server:main" # Assuming a main function

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/github_projects_mcp"]